# -smsbridge

./: .env  AGENTS.md  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_supplier_module.py
apps/backend/app/: main.py
apps/backend/app/api/: admin.py  api_v1.py  auth.py  supplier.py
apps/backend/app/core/: config.py  deps.py  errors.py  middleware.py  security.py
apps/backend/app/db/: seed.py  session.py
apps/backend/app/jobs/: celery_app.py  tasks.py
apps/backend/app/models/: __init__.py  entities.py
apps/backend/app/providers/: base.py  five_sim.py  mock.py  router.py  sms_activate.py  sms_man.py  supplier_pool.py
apps/backend/app/schemas/: admin.py  auth.py  common.py  supplier.py
apps/backend/app/services/: audit.py  limits.py  orders.py  suppliers.py  wallet.py
apps/backend/app/tests/: conftest.py  test_auth_admin.py  test_celery_registration.py  test_order_wallet.py  test_suppliers.py
apps/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/abuse/: page.tsx
apps/frontend/app/acceptable-use/: page.tsx
apps/frontend/app/admin/: page.tsx
apps/frontend/app/api-docs/: page.tsx
apps/frontend/app/buy/: page.tsx
apps/frontend/components/: data-table.tsx  nav.tsx
apps/frontend/lib/: api.ts  i18n.ts
docs/: API_AUDIT.md  ARCHITECTURE_MAP.md  smsbridge_core_rules_and_roadmap.md
(+22 files in other folders)
