[project]
name = "smsbridge-backend"
version = "0.1.0"
description = "Compliant SMS verification testing API marketplace MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "celery>=5.3.0",
  "email-validator>=2.1.0",
  "fastapi>=0.110.0",
  "passlib>=1.7.4",
  "psycopg[binary]>=3.1.0",
  "pydantic-settings>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.25",
  "uvicorn[standard]>=0.27.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
